Functionality In progress

--- a/Dopomoga.API/appsettings.Development.json
+++ b/Dopomoga.API/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "Default": "data source=BACHO\\SQLEXPRESS;initial catalog=Dopomoga;integrated security=False;MultipleActiveResultSets=False;user id=admin;password=admin;App=EntityFramework Application Name=PCS;Persist Security Info=true"
+    "Default": "server=localhost;Database=postgres;Username=postgres;Password=admin;"
   },
   "Logging": {
     "LogLevel": {
