--- a/Dopomoga.API/appsettings.Development.json
+++ b/Dopomoga.API/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "Default": "server=localhost;Database=postgres;Username=postgres;Password=admin;"
+    "Default": "server=185.212.252.163;Port=5432;Database=postgres;Username=admin;Password=admin;"
   },
   "Logging": {
     "LogLevel": {
