--- a/test/test.csproj
+++ b/test/test.csproj
@@ -29,6 +29,7 @@
 
   <ItemGroup>
     <Folder Include="Helpers\" />
+    <Folder Include="wwwroot\content\fonts\" />
   </ItemGroup>
 
   <ItemGroup>
