--- a/Dopomoga.API/appsettings.json
+++ b/Dopomoga.API/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "Default": "server=185.212.252.163;Port=5432;Database=postgres;Username=admin;Password=admin;"
+    "Default": "server=217.147.232.188;Port=5432;Database=dopomoga;Username=dopomoga;Password=Eivo7APix2t#iphu;"
   },
   "Logging": {
     "LogLevel": {
