add subscription functionality

--- a/Dopomoga.API/Dopomoga.API.csproj
+++ b/Dopomoga.API/Dopomoga.API.csproj
@@ -21,6 +21,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Dopomoga.Data\Dopomoga.Data.csproj" />
     <ProjectReference Include="..\Dopomoga.Models\Dopomoga.Models.csproj" />
+    <ProjectReference Include="..\Dopomoga.Services\Dopomoga.Services.csproj" />
   </ItemGroup>
 
 </Project>
