--- a/Dopomoga.Services/Dopomoga.Services.csproj
+++ b/Dopomoga.Services/Dopomoga.Services.csproj
@@ -8,7 +8,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="MailKit" Version="3.5.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="6.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Dopomoga.Data\Dopomoga.Data.csproj" />
   </ItemGroup>
 
 </Project>
